--- a/main.html
+++ b/main.html
@@ -8,6 +8,40 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<th>Roll numbers</th>
+			<th>Student Names</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Ram</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Shyam</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Mohit</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<ol>
+		<li>
+			<img src = "https://picsum.photos/id/123/200/300" alt = "Random Image">
+		</li>
+		<li>
+			<video controls>
+				<source src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			</video>
+		</li>
+		<li>
+			<audio controls src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
+		</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
