--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<table>
 		<thead>
-			<th>Roll numbers</th>
-			<th>Student Names</th>
+			<th>Roll number</th>
+			<th>Student Name</th>
 		</thead>
 		<tbody>
 			<tr>
@@ -28,7 +28,9 @@
 			</tr>
 		</tbody>
 	</table>
-
+	
+	List of medias
+	
 	<ol>
 		<li>
 			<img src = "https://picsum.photos/id/123/200/300" alt = "Random Image">
